--- a/package.json
+++ b/package.json
@@ -2,28 +2,18 @@
   "name": "angular-smd",
   "description": "Simple Material Design components for Angular",
   "version": "1337.0.0",
+  "main": "./index.js",
+  "typings": "./index.d.ts",
   "license": "",
   "repository": {
     "type": "git",
     "url": "https://github.com/jefersonestevo/angular-smd.git"
   },
   "dependencies": {
-    "@angular/common": "^4",
-    "@angular/compiler": "^4",
-    "@angular/core": "^4",
-    "@angular/forms": "^4",
-    "@angular/http": "^4",
-    "@angular/material": "^2.0.0-beta.3",
-    "@angular/platform-browser": "^4",
-    "@angular/platform-browser-dynamic": "^4",
-    "@angular/router": "^4",
-    "babel-core": "6.21.0",
-    "babel-polyfill": "6.20.0",
-    "dateformat": "2.0.0",
-    "debug": "2.5.2",
-    "hammerjs": "^2",
-    "reflect-metadata": "^0",
-    "rxjs": "^5",
-    "zone.js": "^0"
+    "@angular/core": "*",
+    "@angular/material": "*"
+  },
+  "scripts": {
+    "build": "tsc -d src/app/shared/component/smd-fab-speed-dial.ts --experimentalDecorators -t ES5 --lib dom,dom.iterable,es2016,scripthost ; mv src/app/shared/component/smd-fab-speed-dial.js index.js ; mv src/app/shared/component/smd-fab-speed-dial.d.ts index.d.ts"
   }
 }
