fix distribution format for Angular

--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "angular-speed-dial",
-  "description": "FAB Speed Dial component for Angular Material",
-  "version": "1.0.4",
-  "main": "./index.js",
-  "typings": "./index.d.ts",
-  "license": "",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/jefersonestevo/angular-smd.git"
-  },
-  "dependencies": {
-    "@angular/core": "*",
-    "@angular/material": "^2.0.0-beta"
-  },
-  "scripts": {
-    "build": "tsc -d src/app/shared/component/smd-fab-speed-dial.ts --experimentalDecorators -t ES5 --lib dom,dom.iterable,es2016,scripthost ; mv src/app/shared/component/smd-fab-speed-dial.js index.js ; mv src/app/shared/component/smd-fab-speed-dial.d.ts index.d.ts"
-  }
+	"name": "angular-speed-dial",
+	"description": "FAB Speed Dial component for Angular Material",
+	"version": "1.0.5",
+	"main": "./dist/smd-fab-speed-dial.es5.js",
+	"module": "./dist/smd-fab-speed-dial.js",
+	"jsnext:main": "./dist/smd-fab-speed-dial.js",
+	"typings": "./dist/smd-fab-speed-dial.d.ts",
+	"license": "",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/jefersonestevo/angular-smd.git"
+	},
+	"dependencies": {
+		"@angular/core": "*",
+		"@angular/material": "^2.0.0-beta"
+	},
+	"scripts": {
+		"build": "rm -rf dist 2> /dev/null ; tsc -p tsconfig.es5.json ; mv dist/smd-fab-speed-dial.js dist/smd-fab-speed-dial.es5.js ; mv dist/smd-fab-speed-dial.js.map dist/smd-fab-speed-dial.es5.js.map ; rm dist/smd-fab-speed-dial.d.ts ; ngc -p ."
+	}
 }
