--- a/tsconfig.es5.json
+++ b/tsconfig.es5.json
@@ -2,5 +2,8 @@
 	"extends": "./tsconfig.json",
 	"compilerOptions": {
 		"module": "commonjs"
+	},
+	"angularCompilerOptions": {
+		"skipTemplateCodegen": true
 	}
 }
