--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "angular-speed-dial",
 	"description": "FAB Speed Dial component for Angular Material",
-	"version": "1.0.9",
+	"version": "1.1.0",
 	"main": "./dist/smd-fab-speed-dial.es5.js",
 	"module": "./dist/smd-fab-speed-dial.js",
 	"jsnext:main": "./dist/smd-fab-speed-dial.js",
@@ -12,6 +12,8 @@
 		"url": "https://github.com/buu700/angular-speed-dial.git"
 	},
 	"dependencies": {
+		"@angular/cdk": ">=5",
+		"@angular/common": ">=5",
 		"@angular/core": ">=5",
 		"@angular/material": ">=5"
 	},
