--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
 		"url": "https://github.com/buu700/angular-speed-dial.git"
 	},
 	"dependencies": {
-		"@angular/cdk": "5",
-		"@angular/common": "5",
-		"@angular/core": "5",
-		"@angular/material": "5"
+		"@angular/cdk": "^5",
+		"@angular/common": "^5",
+		"@angular/core": "^5",
+		"@angular/material": "^5"
 	},
 	"devDependencies": {
-		"@angular/compiler": "5",
-		"@angular/compiler-cli": "5",
-		"typescript": "2.6"
+		"@angular/compiler": "^5",
+		"@angular/compiler-cli": "^5",
+		"@types/node": "^9",
+		"@types/webpack": "^3",
+		"rxjs": "^5.5",
+		"typescript": "2.6",
+		"webpack": "^3",
+		"zone.js": "*"
 	},
 	"scripts": {
-		"build": "rm -rf dist 2> /dev/null ; ngc -p tsconfig.es5.json ; mv dist/smd-fab-speed-dial.js dist/smd-fab-speed-dial.es5.js ; mv dist/smd-fab-speed-dial.js.map dist/smd-fab-speed-dial.es5.js.map ; rm dist/smd-fab-speed-dial.d.ts dist/smd-fab-speed-dial.metadata.json ; ngc -p ."
+		"build": "rm -rf dist 2> /dev/null ; npx ngc -p tsconfig.es5.json ; mv dist/smd-fab-speed-dial.js dist/smd-fab-speed-dial.es5.js ; mv dist/smd-fab-speed-dial.js.map dist/smd-fab-speed-dial.es5.js.map ; rm dist/smd-fab-speed-dial.d.ts dist/smd-fab-speed-dial.metadata.json ; npx ngc -p ."
 	}
 }
