--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
 		"url": "https://github.com/buu700/angular-speed-dial.git"
 	},
 	"peerDependencies": {
-		"@angular/animations": "next",
-		"@angular/cdk": "next",
-		"@angular/common": "next",
-		"@angular/core": "next",
-		"@angular/forms": "next",
-		"@angular/material": "next",
-		"@angular/platform-browser": "next"
+		"@angular/animations": "^9",
+		"@angular/cdk": "^9",
+		"@angular/common": "^9",
+		"@angular/core": "^9",
+		"@angular/forms": "^9",
+		"@angular/material": "^9",
+		"@angular/platform-browser": "^9"
 	},
 	"devDependencies": {
-		"@angular/animations": "next",
-		"@angular/cdk": "next",
-		"@angular/common": "next",
-		"@angular/compiler": "next",
-		"@angular/compiler-cli": "next",
-		"@angular/core": "next",
-		"@angular/forms": "next",
-		"@angular/material": "next",
-		"@angular/platform-browser": "next",
+		"@angular/animations": "^9",
+		"@angular/cdk": "^9",
+		"@angular/common": "^9",
+		"@angular/compiler": "^9",
+		"@angular/compiler-cli": "^9",
+		"@angular/core": "^9",
+		"@angular/forms": "^9",
+		"@angular/material": "^9",
+		"@angular/platform-browser": "^9",
 		"@types/node": "^9",
 		"@types/webpack": "^4",
 		"rxjs": "^6",
-		"typescript": "~3.6",
+		"typescript": "~3.7",
 		"webpack": "^4",
 		"zone.js": "*"
 	},
