refactor into Angular 13 project template structure

--- a/package.json
+++ b/package.json
@@ -1,43 +1,78 @@
 {
 	"name": "angular-speed-dial",
 	"description": "FAB Speed Dial component for Angular Material",
-	"version": "12.0.0",
-	"main": "./dist/smd-fab-speed-dial.es5.js",
-	"module": "./dist/smd-fab-speed-dial.js",
-	"jsnext:main": "./dist/smd-fab-speed-dial.js",
-	"typings": "./dist/smd-fab-speed-dial.d.ts",
+	"version": "13.0.0",
+	"scripts": {
+		"build": "rm -rf dist 2> /dev/null && cp -f package.json README.md projects/angular-speed-dial/ && npx ng build angular-speed-dial",
+		"prepare": "husky install"
+	},
 	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/buu700/angular-speed-dial.git"
 	},
-	"peerDependencies": {
-		"@angular/animations": "^12",
-		"@angular/cdk": "^12",
-		"@angular/common": "^12",
-		"@angular/core": "^12",
-		"@angular/forms": "^12",
-		"@angular/material": "^12",
-		"@angular/platform-browser": "^12"
+	"prettier": {
+		"arrowParens": "avoid",
+		"bracketSpacing": false,
+		"endOfLine": "lf",
+		"htmlWhitespaceSensitivity": "css",
+		"jsxBracketSameLine": false,
+		"jsxSingleQuote": false,
+		"printWidth": 80,
+		"proseWrap": "always",
+		"quoteProps": "consistent",
+		"semi": true,
+		"singleQuote": true,
+		"tabWidth": 4,
+		"trailingComma": "none",
+		"useTabs": true
+	},
+	"dependencies": {
+		"tslib": "^2"
 	},
 	"devDependencies": {
-		"@angular/animations": "^12",
-		"@angular/cdk": "^12",
-		"@angular/common": "^12",
-		"@angular/compiler": "^12",
-		"@angular/compiler-cli": "^12",
-		"@angular/core": "^12",
-		"@angular/forms": "^12",
-		"@angular/material": "^12",
-		"@angular/platform-browser": "^12",
-		"@types/node": "^14",
+		"@angular-devkit/build-angular": "^13",
+		"@angular/animations": "^13",
+		"@angular/cdk": "^13",
+		"@angular/cli": "^13",
+		"@angular/common": "^13",
+		"@angular/compiler": "^13",
+		"@angular/compiler-cli": "^13",
+		"@angular/core": "^13",
+		"@angular/forms": "^13",
+		"@angular/material": "^13",
+		"@angular/platform-browser": "^13",
+		"@angular/platform-browser-dynamic": "^13",
+		"@angular/router": "^13",
+		"@cyph/prettier": "*",
+		"@cyph/pretty-quick": "*",
+		"@types/jasmine": "~3.10.0",
+		"@types/node": "^16",
 		"@types/webpack": "^5",
-		"rxjs": "^6",
-		"typescript": "~4.2",
+		"husky": "^7",
+		"jasmine-core": "~3.10.0",
+		"karma": "~6.3.0",
+		"karma-chrome-launcher": "~3.1.0",
+		"karma-coverage": "~2.0.3",
+		"karma-jasmine": "~4.0.0",
+		"karma-jasmine-html-reporter": "~1.7.0",
+		"ng-packagr": "^13",
+		"rxjs": "^7",
+		"typescript": "~4.4",
 		"webpack": "^5",
 		"zone.js": "*"
 	},
-	"scripts": {
-		"build": "rm -rf dist 2> /dev/null && npx ngc -p tsconfig.es5.json && mv dist/smd-fab-speed-dial.js dist/smd-fab-speed-dial.es5.js && mv dist/smd-fab-speed-dial.js.map dist/smd-fab-speed-dial.es5.js.map && rm dist/smd-fab-speed-dial.d.ts dist/smd-fab-speed-dial.metadata.json && npx ngc -p . && chmod -R 777 dist && git add dist"
+	"peerDependencies": {
+		"@angular/animations": "^13",
+		"@angular/cdk": "^13",
+		"@angular/common": "^13",
+		"@angular/core": "^13",
+		"@angular/forms": "^13",
+		"@angular/material": "^13",
+		"@angular/platform-browser": "^13",
+		"@angular/platform-browser-dynamic": "^13",
+		"@angular/router": "^13",
+		"rxjs": "^7",
+		"zone.js": "*"
 	}
 }
