--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,35 @@
+/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
+	"compileOnSave": false,
 	"compilerOptions": {
-		"target": "es5",
-		"module": "es2015",
-		"declaration": true,
+		"paths": {
+			"angular-speed-dial": [
+				"dist/angular-speed-dial/angular-speed-dial",
+				"dist/angular-speed-dial"
+			]
+		},
+		"baseUrl": "./",
+		"outDir": "./dist/out-tsc",
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		"noImplicitOverride": true,
+		"noPropertyAccessFromIndexSignature": true,
+		"noImplicitReturns": true,
+		"noFallthroughCasesInSwitch": true,
 		"sourceMap": true,
-		"moduleResolution": "node",
-		"emitDecoratorMetadata": true,
+		"declaration": false,
+		"downlevelIteration": true,
 		"experimentalDecorators": true,
-		"outDir": "./dist",
-		"lib": ["es2015", "dom"]
+		"moduleResolution": "node",
+		"importHelpers": true,
+		"target": "es2017",
+		"module": "es2020",
+		"lib": ["es2020", "dom"]
 	},
-	"files": [
-		"./smd-fab-speed-dial.ts"
-	],
 	"angularCompilerOptions": {
-		"enableIvy": false,
-		"skipTemplateCodegen": true
+		"enableI18nLegacyMessageIdFormat": false,
+		"strictInjectionParameters": true,
+		"strictInputAccessModifiers": true,
+		"strictTemplates": true
 	}
 }
