update dependencies and switch to legacy Material components

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "ngx-speed-dial",
 	"description": "FAB Speed Dial component for Angular Material",
-	"version": "13.0.0",
+	"version": "17.0.0",
 	"scripts": {
 		"build": "rm -rf dist 2> /dev/null && cp -f package.json README.md projects/ngx-speed-dial/ && npx ng build ngx-speed-dial",
-		"prepare": "husky install"
+		"prepare": "husky"
 	},
 	"license": "MIT",
 	"repository": {
@@ -31,47 +31,47 @@
 		"tslib": "^2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^13",
-		"@angular/animations": "^13",
-		"@angular/cdk": "^13",
-		"@angular/cli": "^13",
-		"@angular/common": "^13",
-		"@angular/compiler": "^13",
-		"@angular/compiler-cli": "^13",
-		"@angular/core": "^13",
-		"@angular/forms": "^13",
-		"@angular/material": "^13",
-		"@angular/platform-browser": "^13",
-		"@angular/platform-browser-dynamic": "^13",
-		"@angular/router": "^13",
+		"@angular-devkit/build-angular": "^17",
+		"@angular/animations": "^17",
+		"@angular/cdk": "^16",
+		"@angular/cli": "^17",
+		"@angular/common": "^17",
+		"@angular/compiler": "^17",
+		"@angular/compiler-cli": "^17",
+		"@angular/core": "^17",
+		"@angular/forms": "^17",
+		"@angular/material": "^16",
+		"@angular/platform-browser": "^17",
+		"@angular/platform-browser-dynamic": "^17",
+		"@angular/router": "^17",
 		"@cyph/prettier": "*",
 		"@cyph/pretty-quick": "*",
 		"@types/jasmine": "~3.10.0",
-		"@types/node": "^16",
+		"@types/node": "^20",
 		"@types/webpack": "^5",
-		"husky": "^7",
+		"husky": "^9",
 		"jasmine-core": "~3.10.0",
 		"karma": "~6.3.0",
 		"karma-chrome-launcher": "~3.1.0",
 		"karma-coverage": "~2.0.3",
 		"karma-jasmine": "~4.0.0",
 		"karma-jasmine-html-reporter": "~1.7.0",
-		"ng-packagr": "^13",
+		"ng-packagr": "^17",
 		"rxjs": "^7",
-		"typescript": "~4.4",
+		"typescript": "~5.3",
 		"webpack": "^5",
 		"zone.js": "*"
 	},
 	"peerDependencies": {
-		"@angular/animations": "^13",
-		"@angular/cdk": "^13",
-		"@angular/common": "^13",
-		"@angular/core": "^13",
-		"@angular/forms": "^13",
-		"@angular/material": "^13",
-		"@angular/platform-browser": "^13",
-		"@angular/platform-browser-dynamic": "^13",
-		"@angular/router": "^13",
+		"@angular/animations": "^17",
+		"@angular/cdk": "^17",
+		"@angular/common": "^17",
+		"@angular/core": "^17",
+		"@angular/forms": "^17",
+		"@angular/material": "^17",
+		"@angular/platform-browser": "^17",
+		"@angular/platform-browser-dynamic": "^17",
+		"@angular/router": "^17",
 		"rxjs": "^7",
 		"zone.js": "*"
 	}
